--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
@@ -46,4 +46,13 @@ rhbchannel.modelConstruction.gft.group.additonalOutflow=Additional Outflow (opti
 catchment.modelConstruction.gft.group.groundwaterOutflow=Groundwater Outflow
 catchment.modelConstruction.gft.group.tiefenGW=Deep Groundwater
 
+editCalibration.gft.group.catchment.correctionFactor=Correction Factors
+editCalibration.gft.group.catchment.soilFactors=Correction of Soil Parameters
+editCalibration.gft.group.catchment.retention=Retention and Translation
+
 editCalibration.gft.group.calibrationParameters=Calibration Parameters
+editCalibration.gft.group.initialConditions=Initial Conditions
+editCalibration.gft.group.initialConditions.description=Only for simulations without initial conditions from a long term calibration
+
+editCalibration.gft.label.factor=Factor
+editCalibration.gft.label.baseValue=Base Value
