Fixed labels for soil horizon links

--- a/KalypsoModelNA/etc/schema/gml/parameter.properties
+++ b/KalypsoModelNA/etc/schema/gml/parameter.properties
@@ -44,8 +44,8 @@ rrmParam_Snow_rrmParam_xwwo_label=Fresh Snow Density
 rrmParam_Snow_rrmParam_xwwo_tooltip=Percentage of water in fresh snow [-] (\= 0-1)
 rrmParam_SoilLayerParameter_description=SoilLayerParameter
 rrmParam_SoilLayerParameter_label=SoilLayerParameter
-rrmParam_SoilLayerParameter_rrmParam_soilLayerLink_label=Soil Parameter
-rrmParam_SoilLayerParameter_rrmParam_soilLayerLink_tooltip=Soil Parameter / Description of the soil horizon
+rrmParam_SoilLayerParameter_rrmParam_soilLayerLink_label=Soil Horizon
+rrmParam_SoilLayerParameter_rrmParam_soilLayerLink_tooltip=Reference to Soil Horizon
 rrmParam_SoilLayerParameter_rrmParam_xret_label=Interflow
 rrmParam_SoilLayerParameter_rrmParam_xret_tooltip=Selection Interflow
 rrmParam_SoilLayerParameter_rrmParam_xtief_label=Thickness
