--- a/trunk/KalypsoModelNA/etc/schema/gml/pedologie.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/pedologie.properties
@@ -10,5 +10,5 @@ rrmPedo_Soiltype_description=Soil Type
 rrmPedo_Soiltype_label=Soil Type
 rrmPedo_Soiltype_rrmPedo_location_label=Location
 rrmPedo_Soiltype_rrmPedo_location_tooltip=Location
-rrmPedo_Soiltype_rrmPedo_soilTypeLink_label=Soil Type (Link)
-rrmPedo_Soiltype_rrmPedo_soilTypeLink_tooltip=Soil Type (Link)
+rrmPedo_Soiltype_rrmPedo_soilTypeLink_label=Soil Type
+rrmPedo_Soiltype_rrmPedo_soilTypeLink_tooltip=Reference to Soil Type
