multigenerator standard label, featureview for editing a simulation

--- a/KalypsoModelRCM/etc/schema/catchmentModel.properties
+++ b/KalypsoModelRCM/etc/schema/catchmentModel.properties
@@ -2,8 +2,9 @@
 org.kalypso.model.cm=cm
 cm=org.kalypso.model.cm
 
-cm_LinearSumGenerator_label=${property:http://www.opengis.net/gml#description} (${property:org.kalypso.model.rcm.v2#parameterType})
+cm_LinearSumGenerator_label=${property:http://www.opengis.net/gml#description}
 cm_LinearSumGenerator_cm_comment_label=Comment
 cm_LinearSumGenerator_cm_timestep_label=Timestep [min]
 cm_LinearSumGenerator_cm_timestamp_label=Timestamp [hh:mm] (daily values only)
 
+cm_MultiGenerator_label=${property:http://www.opengis.net/gml#description}
