--- a/KalypsoUIRRM/plugin.xml
+++ b/KalypsoUIRRM/plugin.xml
@@ -7,7 +7,7 @@
             class="org.kalypso.ui.rrm.catalog.RRMFeatureTypeStyleCatalogContribution"
             name="RRM-Style-Catalog"/>
    </extension>
-   
+
    <extension
          point="org.eclipse.ui.newWizards">
       <category
@@ -28,16 +28,16 @@
          </description>
       </wizard>
    </extension>
-   
+
    <extension point="org.kalypso.module.kalypsoModule">
       <module class="org.kalypso.ui.rrm.KalypsoModuleRRM"/>
    </extension>
-   
+
   <!-- Commands for the map or map outline -->
 	<extension point="org.eclipse.ui.commands">
 	    <!-- Map -->
 	    <command categoryId="org.kalypso.ogc.gml.map.category" id="org.kalypso.ogc.gml.map.EditRelationsCommand" name="%org.kalypso.ui.editor.mapeditor.actiondelegates.EditRelationsWidgetDelegate.label" description="%org.kalypso.ui.editor.mapeditor.actiondelegates.EditRelationsWidgetDelegate.tooltip"/>
-	    
+
 	    <!-- Map Outline -->
 		<command categoryId="org.kalypso.ui.map.outline.category" id="org.kalypso.ui.map.outline.command.RRMCreateHydrotops" name="%command.name.3"/>
 		<!--
@@ -47,7 +47,7 @@
 
 	 <extension  point="org.eclipse.ui.commandImages">
 	    <image commandId="org.kalypso.ogc.gml.map.EditRelationsCommand" disabledIcon="icons/commands/edit_relation_gray.gif" icon="icons/commands/edit_relation.gif" />
-	 
+
 	    <image commandId="org.kalypso.ui.map.outline.command.RRMCreateHydrotops" icon="icons/geologyImport.gif"/>
 	 </extension>
 
@@ -66,7 +66,7 @@
                 </with>
             </enabledWhen>
         </handler>
-	
+
 		<handler commandId="org.kalypso.ui.map.outline.command.RRMCreateHydrotops" class="org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler">
 			<activeWhen>
 				<reference definitionId="org.kalypso.ui.rrm.definition.onlyRRMThemesSelected"/>
@@ -162,17 +162,17 @@
 						</iterate>
 						<iterate ifEmpty="false" operator="or">
                             <adapt type="org.kalypso.ogc.gml.IKalypsoTheme">
-    							<test property="org.kalypso.ui.test.theme.qname" value="{http://sourceforge.kalypso.org/schemata/hydrology/landuse}Landuse"/>					
+    							<test property="org.kalypso.ui.test.theme.qname" value="{http://sourceforge.kalypso.org/schemata/hydrology/landuse}Landuse"/>
                             </adapt>
 						</iterate>
 						<iterate ifEmpty="false" operator="or">
                             <adapt type="org.kalypso.ogc.gml.IKalypsoTheme">
-    							<test property="org.kalypso.ui.test.theme.qname" value="{http://www.tuhh.de/hydrotop}Hydrotop"/>					
+    							<test property="org.kalypso.ui.test.theme.qname" value="{http://www.tuhh.de/hydrotop}Hydrotop"/>
                             </adapt>
 						</iterate>
 						<iterate ifEmpty="false" operator="or">
                             <adapt type="org.kalypso.ogc.gml.IKalypsoTheme">
-    							<test property="org.kalypso.ui.test.theme.qname" value="{http://www.tuhh.de/kalypsoNA}Catchment"/>					
+    							<test property="org.kalypso.ui.test.theme.qname" value="{http://www.tuhh.de/kalypsoNA}Catchment"/>
                             </adapt>
 						</iterate>
 					</or>
@@ -227,7 +227,7 @@
          <image icon="icons/commands/copyCalcCase.gif" commandId="org.kalypso.ui.rrm.command.calccase.copyCalcCase"/>
          <image icon="icons/commands/createCalcCase.gif" commandId="org.kalypso.ui.rrm.command.calccase.newCalcCase"/>
          <image icon="icons/commands/export-simple-template.gif" commandId="org.kalypso.ui.rrm.command.calccase.setBasicModel"/>
-         
+
          <image icon="icons/timeseries/timeseriesManagementView.gif" commandId="org.kalypso.model.rrm.timeseriesManagement"/>
  </extension>
  <extension
@@ -258,7 +258,7 @@
        </menu>
     </menuContribution>
  </extension>
- 
+
  <extension
          point="org.eclipse.ui.views">
       <view
@@ -300,10 +300,10 @@
             restorable="true">
       </view>
    </extension>
-   
+
   <extension point="org.kalypso.module.conversion">
     <projectconversion module="KalypsRrmModel" class="org.kalypso.ui.rrm.internal.conversion.RrmProjectConverterFactory"/>
-   </extension> 
+   </extension>
 
    <extension point="org.kalypso.ui.typeHandlers">
         <typeHandler factory="org.kalypso.ui.rrm.internal.gml.GuiTypeHandlerFactory"/>
@@ -504,7 +504,7 @@
          point="org.kalypso.afgui.scenarioData">
       <dataSet id="org.kalypso.model.rrm.scenarioDataScope">
          <scenarioDatum classKey="org.kalypso.model.hydrology.timeseries.binding.IStationCollection" id="stations" modelPath="project://.model/timeseries/stations.gml"/>
-         <scenarioDatum classKey="org.kalypso.model.hydrology.cm.binding.ICatchmentModel" id="catchmentModels" modelPath=".models/catchmentModels.gml"/>
+         <scenarioDatum classKey="org.kalypso.model.hydrology.binding.ICatchmentModel" id="catchmentModels" modelPath=".models/catchmentModels.gml"/>
          <scenarioDatum classKey="org.kalypso.model.hydrology.binding.model.NaModell" id="model" modelPath=".models/modell.gml"/>
          <scenarioDatum classKey="org.kalypso.model.hydrology.binding.control.SimulationCollection" id="simulations" modelPath=".models/simulations.gml"/>
 
@@ -514,12 +514,12 @@
          <scenarioDatum classKey="org.kalypso.model.hydrology.binding.NAHydrotop" id="hydrotopes" modelPath=".models/hydrotop.gml"/>
       </dataSet>
    </extension>
-   
+
    <!-- Commands/Handlers for workflow -->
    <!-- REMARK: we define the commands here in order to avoid warning in this file -->
    <extension point="org.eclipse.ui.commands">
             <command id="org.kalypso.model.rrm.timeseriesManagement" name="%org.kalypso.model.rrm.timeseriesManagement.name" description="%org.kalypso.model.rrm.timeseriesManagement.description" />
-            
+
             <command id="org.kalypso.model.rrm.parameterDefinition" name="%org.kalypso.model.rrm.parameterDefinition.name" description="%org.kalypso.model.rrm.parameterDefinition.description" />
             <command id="org.kalypso.model.rrm.snowDefinition" name="%org.kalypso.model.rrm.snowDefinition.name" description="%org.kalypso.model.rrm.snowDefinition.description" />
             <command id="org.kalypso.model.rrm.soilDefinition" name="%org.kalypso.model.rrm.soilDefinition.name" description="%org.kalypso.model.rrm.soilDefinition.description" />
@@ -550,7 +550,7 @@
    </extension>
    <extension point="org.eclipse.ui.commandImages">
             <image commandId="org.kalypso.model.rrm.timeseriesManagement" icon="icons/timeseries/timeseriesManagementView.gif"/>
-            
+
 
             <image commandId="org.kalypso.model.rrm.parameterDefinition" icon="icons/parameters/parameters.gif"/>
             <image commandId="org.kalypso.model.rrm.snowDefinition" icon="icons/parameters/snow.png"/>
@@ -568,16 +568,16 @@
                   commandId="org.kalypso.model.rrm.editNetRelations"
                   icon="icons/model/1334146981_Internet_link_02.png">
             </image>
-            
+
             <image commandId="org.kalypso.model.rrm.hydrotopes" icon="icons/hydrotope/hydrotope.png"/>
             <image commandId="org.kalypso.model.rrm.completeNetElements" icon="icons/parameters/parameters.gif"/>
 
             <image commandId="org.kalypso.model.rrm.catchmentModels" icon="icons/cm/catchmentModelsView.png"/>
-            
+
             <image commandId="org.kalypso.model.rrm.editCalibration" icon="icons/calibration/calibration.png"/>
 
             <image commandId="org.kalypso.model.rrm.simulationManagement" icon="icons/simulations/simulation.gif"/>
-            
+
             <image commandId="org.kalypso.model.rrm.simulationManagement.refreshSimulations" icon="icons/simulations/refreshSimulations.gif"/>
             <image
                   commandId="org.kalypso.ui.rrm.internal.timeseries.view.expand.tree.items"
@@ -588,19 +588,19 @@
                   icon="icons/timeseries/collapseall.gif">
             </image>
    </extension>
-   
+
    <extension point="org.eclipse.ui.handlers">
       <handler class="org.kalypso.ui.rrm.internal.timeseries.view.TimeseriesManagementTaskHandler" commandId="org.kalypso.model.rrm.timeseriesManagement"/>
-      
+
       <handler class="org.kalypso.ui.rrm.internal.parameters.SnowTaskHandler" commandId="org.kalypso.model.rrm.snowDefinition"/>
       <handler class="org.kalypso.ui.rrm.internal.parameters.SoilTaskHandler" commandId="org.kalypso.model.rrm.soilDefinition"/>
       <handler class="org.kalypso.ui.rrm.internal.parameters.LanduseTaskHandler" commandId="org.kalypso.model.rrm.landuseDefinition"/>
-      
+
       <handler class="org.kalypso.ui.rrm.internal.modelConstruction.EditNetElementsTaskHandler" commandId="org.kalypso.model.rrm.editNetElements"/>
       <handler class="org.kalypso.ui.rrm.internal.modelConstruction.EditNetRelationsTaskHandler" commandId="org.kalypso.model.rrm.editNetRelations"/>
       <handler class="org.kalypso.ui.rrm.internal.hydrotops.HydrotopesTaskHandler" commandId="org.kalypso.model.rrm.hydrotopes"/>
       <handler class="org.kalypso.ui.rrm.internal.modelConstruction.CompleteNetElementsTaskHandler" commandId="org.kalypso.model.rrm.completeNetElements"/>
-      
+
       <handler class="org.kalypso.ui.rrm.internal.cm.view.CatchmentModelsTaskHandler" commandId="org.kalypso.model.rrm.catchmentModels"/>
       <handler class="org.kalypso.ui.rrm.internal.calibration.EditCalibrationTaskHandler" commandId="org.kalypso.model.rrm.editCalibration"/>
       <handler class="org.kalypso.ui.rrm.internal.simulations.SimulationManagementTaskHandler" commandId="org.kalypso.model.rrm.simulationManagement"/>
@@ -630,7 +630,7 @@
             commandId="org.kalypso.ui.rrm.internal.timeseries.view.collapse.tree.items">
       </handler>
    </extension>
-   
+
     <!-- View menu for GML-Table -->
     <extension point="org.eclipse.ui.menus">
         <menuContribution locationURI="toolbar:org.kalypso.ui.editor.gistableeditor.GttViewPart?after=additions">
@@ -639,7 +639,7 @@
             </command>
         </menuContribution>
      </extension>
-   
+
  <extension point="org.eclipse.ui.menus">
     <menuContribution locationURI="toolbar:org.kalypso.model.rrm.ui.thiessen.maptoolbar">
         <command commandId="org.kalypso.ogc.gml.map.SelectSingleFeatureCommand" style="radio">
@@ -653,7 +653,7 @@
               <with variable="activeMapPanel">
                  <test args="isCascading" property="org.kalypso.ui.test.map.themeProperty.hasProperty" value="movieTheme"/>
               </with>
-            
+
            </visibleWhen>
            -->
         </command>
@@ -665,9 +665,9 @@
         <separator name="mapExport" visible="true" />
         <command commandId="org.kalypso.ogc.gml.map.Screenshot" style="push"  />
         <command commandId="org.kalypso.ogc.gml.map.ExportClipboardCommand" style="push"/>
-        
+
         <separator name="additions"/>
-    </menuContribution>   
+    </menuContribution>
     <menuContribution locationURI="toolbar:org.kalypso.model.rrm.ui.idw.maptoolbar">
         <command commandId="org.kalypso.ogc.gml.map.SelectSingleFeatureCommand" style="radio">
             <visibleWhen checkEnabled="true"/>
@@ -680,7 +680,7 @@
               <with variable="activeMapPanel">
                  <test args="isCascading" property="org.kalypso.ui.test.map.themeProperty.hasProperty" value="movieTheme"/>
               </with>
-            
+
            </visibleWhen>
            -->
         </command>
@@ -692,7 +692,7 @@
         <separator name="mapExport" visible="true" />
         <command commandId="org.kalypso.ogc.gml.map.Screenshot" style="push"  />
         <command commandId="org.kalypso.ogc.gml.map.ExportClipboardCommand" style="push"/>
-        
+
         <separator name="additions"/>
     </menuContribution>
    </extension>
