--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
@@ -29,6 +29,7 @@ modelNet.gmt.groundwater=Groundwater - Net
 
 control.gft.general=General
 control.gft.simulation=Simulation Management
+control.gft.calculation=Calculation
 control.gft.syntheticPrecipitation=Synthetic precipitation events
 
 thiessen.gmt.stations=Timeseries
