--- a/KalypsoUIRRM/plugin.xml
+++ b/KalypsoUIRRM/plugin.xml
@@ -504,7 +504,7 @@
          point="org.kalypso.afgui.scenarioData">
       <dataSet id="org.kalypso.model.rrm.scenarioDataScope">
          <scenarioDatum classKey="org.kalypso.model.hydrology.timeseries.binding.IStationCollection" id="stations" modelPath="project://.model/timeseries/stations.gml"/>
-         <scenarioDatum classKey="org.kalypso.model.hydrology.binding.ICatchmentModel" id="catchmentModels" modelPath=".models/catchmentModels.gml"/>
+         <scenarioDatum classKey="org.kalypso.model.hydrology.binding.cm.ICatchmentModel" id="catchmentModels" modelPath=".models/catchmentModels.gml"/>
          <scenarioDatum classKey="org.kalypso.model.hydrology.binding.model.NaModell" id="model" modelPath=".models/modell.gml"/>
          <scenarioDatum classKey="org.kalypso.model.hydrology.binding.control.SimulationCollection" id="simulations" modelPath=".models/simulations.gml"/>
 
