new result view task

--- a/KalypsoUIRRM/plugin.properties
+++ b/KalypsoUIRRM/plugin.properties
@@ -38,6 +38,9 @@ org.kalypso.model.rrm.editCalibration.description=Edit calibration parameters of
 org.kalypso.model.rrm.simulationManagement.name=Simulation Management
 org.kalypso.model.rrm.simulationManagement.description=Simulation Management
 
+org.kalypso.model.rrm.resultView.name=Result View
+org.kalypso.model.rrm.resultView.description=Result View
+
 NewWizard.name=KalypsoHydrology Model
 Category.name=Rainfall-Runoff Model
 
@@ -52,7 +55,7 @@ org.kalypso.ui.rrm.command.calccase.copyCalcCase.tooltip=Duplicates the selected
 org.kalypso.ui.rrm.command.calccase.newCalcCase.label=New...
 org.kalypso.ui.rrm.command.calccase.newCalcCase.tooltip=Creates new calculation case
 org.kalypso.ui.rrm.command.calccase.setBasicModel.label=Transfer to basic model...
-org.kalypso.ui.rrm.command.calccase.setBasicModel.tooltip=Takes the model from the calculation case as basic model 
+org.kalypso.ui.rrm.command.calccase.setBasicModel.tooltip=Takes the model from the calculation case as basic model
 
 org.kalypso.ui.rrm.internal.newproject.KalypsoNAProjectWizard.description = Creates a new KalypsoHydrology Model. The wizards allows to import some of the base data (catchments, hydrotops) from ESRI-Shape files.
 org.kalypso.ui.rrm.commandCategory.description = KalypsoHydrology Commands
