--- a/trunk/KalypsoUIRRM/plugin.xml
+++ b/trunk/KalypsoUIRRM/plugin.xml
@@ -628,6 +628,8 @@
       <handler class="org.kalypso.ui.rrm.internal.cm.view.CatchmentModelsTaskHandler" commandId="org.kalypso.model.rrm.catchmentModels"/>
       <handler class="org.kalypso.ui.rrm.internal.calibration.EditCalibrationTaskHandler" commandId="org.kalypso.model.rrm.editCalibration"/>
       <handler class="org.kalypso.ui.rrm.internal.simulations.SimulationManagementTaskHandler" commandId="org.kalypso.model.rrm.simulationManagement"/>
+      <handler class="org.kalypso.ui.rrm.internal.results.view.ResultManagementTaskHandler" commandId="org.kalypso.model.rrm.resultView"/>
+
       <handler class="org.kalypso.ui.rrm.internal.simulations.RefreshSimulationsTaskHandler" commandId="org.kalypso.model.rrm.simulationManagement.refreshSimulations">
          <enabledWhen>
          	<and>
