Incomplete - task : Ausgabemanagement

--- a/KalypsoUIRRM/plugin.properties
+++ b/KalypsoUIRRM/plugin.properties
@@ -35,6 +35,9 @@ org.kalypso.model.rrm.catchmentModels.description=Catchment Models
 org.kalypso.model.rrm.editCalibration.name=Calibration
 org.kalypso.model.rrm.editCalibration.description=Edit calibration parameters of the model
 
+org.kalypso.model.rrm.simulationResultOutputManagement.name=Result output management
+org.kalypso.model.rrm.simulationResultOutputManagement.description=Edit the simulation result outputs settings
+
 org.kalypso.model.rrm.simulationManagement.name=Simulation Management
 org.kalypso.model.rrm.simulationManagement.description=Simulation Management
 
