Renamed catchment models task

--- a/KalypsoUIRRM/plugin.properties
+++ b/KalypsoUIRRM/plugin.properties
@@ -29,8 +29,8 @@ org.kalypso.model.rrm.hydrotopes.description=Hydrotopes
 org.kalypso.model.rrm.completeNetElements.name=Model Parameters
 org.kalypso.model.rrm.completeNetElements.description=Complement Model Parameters
 
-org.kalypso.model.rrm.catchmentModels.name=Catchment Models
-org.kalypso.model.rrm.catchmentModels.description=Catchment Models
+org.kalypso.model.rrm.catchmentModels.name=Timeseries Mappings
+org.kalypso.model.rrm.catchmentModels.description=Associate timeseries to model elements
 
 org.kalypso.model.rrm.editCalibration.name=Calibration
 org.kalypso.model.rrm.editCalibration.description=Edit calibration parameters of the model
